--- a/content/posters.Rmd
+++ b/content/posters.Rmd
@@ -6,19 +6,17 @@ output: html_document
 ---
 
 
-## WCPG Poster 2019
+#### WCPG Poster 2019
 
-[Link](https://jodielord.netlify.com/WCPG2019_JodieLord.pdf) to latest poster presented at the 2019 World Congress for Psychiatric Genetics in Los Angeles.
-
+[Link to latest poster](https://jodielord.netlify.com/WCPG2019_JodieLord.pdf) presented at the 2019 World Congress for Psychiatric Genetics in Los Angeles.
 <br/>
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## NIHR Biomedical Research Council Poster 2019
+#### NIHR Biomedical Research Council Poster 2019
 
-[Link](https://jodielord.netlify.com/JL_BRC_Poster2019.pdf) to poster presented at the 2019 NIHR BRC Mausdley Conference in London.
+[Link to poster](https://jodielord.netlify.com/JL_BRC_Poster2019.pdf) presented at the 2019 NIHR BRC Mausdley Conference in London.
 
 <br/>
 
@@ -27,9 +25,8 @@ _______________________________________________________________________
 <br/>
 
 # Talks/Presentations
-<br/>
 
-## Maurice Wohl Clinical Neuroscience Institute - 2019
+#### Maurice Wohl Clinical Neuroscience Institute - 2019
 
 Center Talk:
 ["Investigating the role of modifiable risk factors on the causal pathway to Alzheimer's Disease"](https://jodielord.netlify.com/JodieLord_MWCNI_2019.pdf).
