--- a/content/posters.Rmd
+++ b/content/posters.Rmd
@@ -40,6 +40,14 @@ _______________________________________________________________________
 
 <br/>
 
+
+#### Social, Genetic and Developmental Psychiatry Centre (SGDP) - 2020
+
+- SGU Methods Meeting:
+["Mendelian Randomization: Introduction to methods and applications"](https://jodielord.netlify.com/JodieLord_MWCNI_2019.pdf).
+
+<br/>
+
 #### Maurice Wohl Clinical Neuroscience Institute - 2019
 
 - Center Talk:
