--- a/content/posters.Rmd
+++ b/content/posters.Rmd
@@ -21,7 +21,7 @@ _______________________________________________________________________
 
 #### ISCB Poster 2020
 
-- [Link to academic work](ISCB_poster_2020_animated.gif) presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
+- [Link to academic work](https://jodielord.netlify.com/ISCB_poster_2020_animated.gif) presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
 <br/>
 <br/>
 
