--- a/content/papers.Rmd
+++ b/content/papers.Rmd
@@ -12,6 +12,22 @@ knitr::opts_chunk$set(echo = TRUE)
 _______________________________________________________________________
 
 
+# Publications
+
+_______________________________________________________________________
+
+- ###  [Integrated lipidomics and proteomics network analysis highlights lipid and immunity pathways associated with Alzheimer’s disease](https://link.springer.com/epdf/10.1186/s40035-020-00215-0?sharing_token=rDhcqrDwxHpPr9KVQnNAQm_BpE1tBhCbnbw3BuzI2RMack7kbujqP_X-ofWsx-46ldfN8uNgddF6WQJfINxSB6Wsva1Vqwae_tqTdQl2TrKHAl08e7-qKVWzx4Ae986dEAZF2P308PiyisWZpKP16t2NcjKBdygtKOfwRVD1Nno%3D) 
+<br/>
+_Jin Xu, Giulia Bankov, Min Kim, Asger Wretlind, **Jodie Lord**, Rebecca Green, Angela Hodges, Abdul Hye, Dag Aarsland, Latha Velayudhan, Richard J.B. Dobson, Petroula Proitsi, Cristina Legido-Quigley, on behalf of the AddNeuroMed Consortium (2020). Translational Neurodegeneration. 9,1, p.36_
+<br/>
+<br/>
+Background: There is an urgent need to understand the pathways and processes underlying Alzheimer’s disease (AD) for early diagnosis and development of effective treatments. This study was aimed to investigate Alzheimer’s dementia using an unsupervised lipid, protein and gene multi-omics integrative approach. Methods: A lipidomics dataset comprising 185 AD patients, 40 mild cognitive impairment (MCI) individuals and 185 controls, and two proteomics datasets (295 AD, 159 MCI and 197 controls) were used for weighted gene coexpression network analyses (WGCNA). Correlations of modules created within each modality with clinical AD diagnosis, brain atrophy measures and disease progression, as well as their correlations with each other, were analyzed. Gene ontology enrichment analysis was employed to examine the biological processes and molecular and cellular functions of protein modules associated with AD phenotypes. Lipid species were annotated in the lipid modules associated with AD phenotypes. The associations between established AD risk loci and the lipid/protein modules that showed high correlation with AD phenotypes were also explored. Results: Five of the 20 identified lipid modules and five of the 17 identified protein modules were correlated with clinical AD diagnosis, brain atrophy measures and disease progression. The lipid modules comprising phospholipids, triglycerides, sphingolipids and cholesterol esters were correlated with AD risk loci involved in immune response and lipid metabolism. The five protein modules involved in positive regulation of cytokine production, neutrophilmediated immunity, and humoral immune responses were correlated with AD risk loci involved in immune and complement systems and in lipid metabolism (the APOE ε4 genotype).
+<br/>
+<br/>
+
+_______________________________________________________________________
+
+
 # Open Access Pre-prints
 
 _______________________________________________________________________
