--- a/content/posters.Rmd
+++ b/content/posters.Rmd
@@ -28,13 +28,13 @@ _______________________________________________________________________
 
 #### WCPG Poster 2019
 
-- [Link to poster](https://jodielord.netlify.com/WCPG2019_JodieLord.pdf) presented at the 2019 World Congress for Psychiatric Genetics, hosted in Los Angeles.
+- [Link to poster](https://jodielord.netlify.com/WCPG2019_JodieLord.pdf) presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles.
 <br/>
 <br/>
 
 #### NIHR Biomedical Research Council Poster 2019
 
-- [Link to poster](https://jodielord.netlify.com/JL_BRC_Poster2019.pdf) presented at the 2019 NIHR BRC Mausdley Conference in London.
+- [Link to poster](https://jodielord.netlify.com/JL_BRC_Poster2019.pdf) presented at the 2019 NIHR BRC Maudsley Conference, London.
 
 <br/>
 
