adding Edinburgh presentation

--- a/content/posters.Rmd
+++ b/content/posters.Rmd
@@ -48,6 +48,14 @@ _______________________________________________________________________
 <br/>
 
 
+#### Edinburgh University - December 2020
+
+- Presentation:
+["Disentangling independent and mediated causal relationships between blood metabolites and Alzheimer's Disease"](https://jodielord.netlify.com/Edinburgh_dec2020.pdf).
+
+<br/>
+
+
 #### Staistical Genetics Unit - October 2020
 
 - Journal Club Presentation:
