--- a/content/posters.Rmd
+++ b/content/posters.Rmd
@@ -13,35 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 _______________________________________________________________________
 
 
-# Academic Posters
-
-_______________________________________________________________________
-
-<br/>
-
-#### ISCB Poster 2020
-
-- [Link to work](https://jodielord.netlify.com/ISCB_poster_2020_animated.gif) presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
-<br/>
-<br/>
-
-
-#### WCPG Poster 2019
-
-- [Link to poster](https://jodielord.netlify.com/WCPG2019_JodieLord.pdf) presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles.
-<br/>
-<br/>
-
-#### NIHR Biomedical Research Council Poster 2019
-
-- [Link to poster](https://jodielord.netlify.com/JL_BRC_Poster2019.pdf) presented at the 2019 NIHR BRC Maudsley Conference, London.
-
-<br/>
-
-_______________________________________________________________________
-
-
-# Talks/Presentations
+# Talks & Presentations
 
 _______________________________________________________________________
 
@@ -79,6 +51,32 @@ _______________________________________________________________________
 
 
 <br/>
+_______________________________________________________________________
+
+
+# Academic Posters
+
+_______________________________________________________________________
+
+<br/>
+
+#### ISCB Poster 2020
+
+- [Link to work](https://jodielord.netlify.com/ISCB_poster_2020_animated.gif) presented at the 2020 conference of the International Society of Clinical Biostatistics, hosted virtually (due to ongoing COVID-19).
+<br/>
+<br/>
+
+
+#### WCPG Poster 2019
+
+- [Link to poster](https://jodielord.netlify.com/WCPG2019_JodieLord.pdf) presented at the 2019 World Congress for Psychiatric Genetics, Los Angeles.
+<br/>
+<br/>
+
+#### NIHR Biomedical Research Council Poster 2019
+
+- [Link to poster](https://jodielord.netlify.com/JL_BRC_Poster2019.pdf) presented at the 2019 NIHR BRC Maudsley Conference, London.
+
 <br/>
 
 ____________
