--- a/content/papers.Rmd
+++ b/content/papers.Rmd
@@ -18,7 +18,7 @@ _______________________________________________________________________
 
 <br/>
 
-- ### [Association between polygenic risk score of Alzheimer's disease and plasma phosphorylated tau in individuals from the Alzheimer's Disease Neuroimaging Initiative](https://pubmed.ncbi.nlm.nih.gov/33419453/) 
+### [Association between polygenic risk score of Alzheimer's disease and plasma phosphorylated tau in individuals from the Alzheimer's Disease Neuroimaging Initiative](https://pubmed.ncbi.nlm.nih.gov/33419453/) 
 <br/>
 Anna Zettergren, **Jodie Lord**, Nicholas J Ashton, Andrea L Benedet, Thomas K Karikari, Juan Lantero Rodriguez, Alzheimer’s Disease Neuroimaging Initiative; Anniina Snellman, Marc Suárez-Calvet, Petroula Proitsi, Henrik Zetterberg, Kaj Blennow (2021)
 <br/>
@@ -27,7 +27,7 @@ Anna Zettergren, **Jodie Lord**, Nicholas J Ashton, Andrea L Benedet, Thomas K K
 <br/>
 <br/>
 
-- ###  [Integrated lipidomics and proteomics network analysis highlights lipid and immunity pathways associated with Alzheimer’s disease](https://link.springer.com/epdf/10.1186/s40035-020-00215-0?sharing_token=rDhcqrDwxHpPr9KVQnNAQm_BpE1tBhCbnbw3BuzI2RMack7kbujqP_X-ofWsx-46ldfN8uNgddF6WQJfINxSB6Wsva1Vqwae_tqTdQl2TrKHAl08e7-qKVWzx4Ae986dEAZF2P308PiyisWZpKP16t2NcjKBdygtKOfwRVD1Nno%3D) 
+###  [Integrated lipidomics and proteomics network analysis highlights lipid and immunity pathways associated with Alzheimer’s disease](https://link.springer.com/epdf/10.1186/s40035-020-00215-0?sharing_token=rDhcqrDwxHpPr9KVQnNAQm_BpE1tBhCbnbw3BuzI2RMack7kbujqP_X-ofWsx-46ldfN8uNgddF6WQJfINxSB6Wsva1Vqwae_tqTdQl2TrKHAl08e7-qKVWzx4Ae986dEAZF2P308PiyisWZpKP16t2NcjKBdygtKOfwRVD1Nno%3D) 
 <br/>
 Jin Xu, Giulia Bankov, Min Kim, Asger Wretlind, **Jodie Lord**, Rebecca Green, Angela Hodges, Abdul Hye, Dag Aarsland, Latha Velayudhan, Richard J.B. Dobson, Petroula Proitsi, Cristina Legido-Quigley, on behalf of the AddNeuroMed Consortium (2020). Translational Neurodegeneration. 9,1, p.36
 <br/>
@@ -45,7 +45,7 @@ _______________________________________________________________________
 
 <br/>
 
-- ### [Deciphering the causal relationship between blood metabolites and Alzheimers Disease: a Mendelian Randomization study](https://www.medrxiv.org/content/10.1101/2020.04.28.20083253v1) 
+### [Deciphering the causal relationship between blood metabolites and Alzheimers Disease: a Mendelian Randomization study](https://www.medrxiv.org/content/10.1101/2020.04.28.20083253v1) 
 <br/>
 **Jodie Lord**, Bradley Jermy, Rebecca Green, Andrew Wong, Jin Xu, Cristina Legido-Quigley, Richard Dobson, Marcus Richards, Petra Proitsi (2020)
 <br/>
@@ -55,7 +55,7 @@ _______________________________________________________________________
 <br/>
 
 
-- ###  [Metabolic correlates of late midlife cognitive function: findings from the 1946 British Birth Cohort](https://www.medrxiv.org/content/10.1101/2020.11.23.20236463v1.full.pdf) 
+###  [Metabolic correlates of late midlife cognitive function: findings from the 1946 British Birth Cohort](https://www.medrxiv.org/content/10.1101/2020.11.23.20236463v1.full.pdf) 
 <br/>
 Rebecca Green, **Jodie Lord**, Jin Xu, Jane Maddock, Min Kim, Richard Dobson, Cristina Legido-Quigley, Andrew Wong, Marcus Richards, Petroula Proitsi
 <br/>
@@ -65,7 +65,7 @@ Rebecca Green, **Jodie Lord**, Jin Xu, Jane Maddock, Min Kim, Richard Dobson, Cr
 <br/>
 
 
-- ###  [Integrated lipidomics and proteomics network analysis highlights lipid and immunity pathways associated with Alzheimer’s disease](https://www.biorxiv.org/content/10.1101/2020.03.18.995464v2) 
+###  [Integrated lipidomics and proteomics network analysis highlights lipid and immunity pathways associated with Alzheimer’s disease](https://www.biorxiv.org/content/10.1101/2020.03.18.995464v2) 
 <br/>
 Jin Xu, Giulia Bankov, Min Kim, Asger Wretlind, **Jodie Lord**, Rebecca Green, Angela Hodges, Abdul Hye, Dag Aarsland, Latha Velayudhan, Richard J.B. Dobson, Petroula Proitsi, Cristina Legido-Quigley, on behalf of the AddNeuroMed Consortium (2020)
 <br/>
